--- a/package.json
+++ b/package.json
@@ -1,47 +1,33 @@
 {
-  "name": "mychat",
-  "version": "0.1.0",
-  "private": true,
+  "name": "chat-app-vite",
+  "version": "0.0.0",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "dev": "vite",
+    "host": "vite --host",
+    "build": "vue-tsc --noEmit && vite build",
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "@headlessui/vue": "^1.4.2",
+    "@typescript-eslint/parser": "^5.5.0",
+    "bootstrap-icons": "^1.7.1",
+    "firebase": "^9.6.0",
+    "pinia": "^2.0.1",
+    "vue": "^3.2.23",
+    "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "sass": "^1.32.7",
-    "sass-loader": "^12.0.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {
-      "no-unused-vars":"off"
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "@vitejs/plugin-vue": "^1.10.1",
+    "autoprefixer": "^10.4.0",
+    "eslint": "^8.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.1.1",
+    "postcss": "^8.4.4",
+    "tailwindcss": "3.0.0-alpha.1",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14",
+    "vue-eslint-parser": "^8.0.1",
+    "vue-tsc": "^0.3.0"
+  }
 }
